Removing virtual list for now

--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "dev": "run-p start:dev autobuild",
     "start": "sirv public",
     "start:dev": "sirv public --dev"
+  },
+  "dependencies": {
+    "svelte-transitions": "^1.2.0"
   }
 }
