--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "rollup-plugin-svelte": "^4.3.1",
     "rollup-plugin-terser": "^3.0.0",
     "sirv-cli": "^0.2.2",
-    "svelte": "^2.15.3"
+    "svelte": "^2.15.3",
+    "timeUtils": "^1.0.1"
   },
   "scripts": {
     "build": "rollup -c",
