--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "version": "1.0.0",
   "devDependencies": {
     "@sveltejs/svelte-virtual-list": "^2.2.1",
+    "es6-object-assign": "^1.1.0",
     "npm-run-all": "^4.1.3",
     "rollup": "^0.66.2",
     "rollup-plugin-browsersync": "^0.2.6",
+    "rollup-plugin-buble": "^0.19.4",
     "rollup-plugin-commonjs": "^9.1.8",
     "rollup-plugin-node-resolve": "^3.4.0",
     "rollup-plugin-svelte": "^4.3.1",
