--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "svelte-app",
+  "name": "svelteCal",
   "svelte": "src/Components/Calendar.html",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "devDependencies": {
     "@sveltejs/svelte-virtual-list": "^2.2.1",
     "es6-object-assign": "^1.1.0",
@@ -14,6 +14,7 @@
     "rollup-plugin-svelte": "^4.3.1",
     "rollup-plugin-terser": "^3.0.0",
     "sirv-cli": "^0.2.2",
+    "standard-version": "^4.4.0",
     "svelte": "^2.15.3",
     "svelte-transitions": "^1.2.0",
     "timeUtils": "^1.1.4"
@@ -23,7 +24,8 @@
     "autobuild": "rollup -c -w",
     "dev": "run-p start:dev autobuild",
     "start": "sirv public",
-    "start:dev": "sirv public --dev"
+    "start:dev": "sirv public --dev",
+    "release": "npm run build && standard-version"
   },
   "dependencies": {}
 }
