--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "svelteCal",
-  "svelte": "src/Components/Calendar.html",
+  "svelte": "src/Components/Datepicker.html",
   "version": "0.0.1",
   "devDependencies": {
     "@sveltejs/svelte-virtual-list": "^2.2.1",
