--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "rollup-plugin-buble": "^0.19.4",
     "rollup-plugin-commonjs": "^9.1.8",
     "rollup-plugin-node-resolve": "^3.4.0",
-    "rollup-plugin-svelte": "^4.3.1",
+    "rollup-plugin-svelte": "^5.0.0",
     "rollup-plugin-terser": "^3.0.0",
     "sirv-cli": "^0.2.2",
     "standard-version": "^4.4.0",
-    "svelte": "^2.15.3",
+    "svelte": "^3.0.0-alpha16",
     "svelte-transitions": "^1.2.0",
     "timeUtils": "^1.1.4"
   },
