--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "svelteCal",
+  "name": "svelte-calendar",
   "svelte": "src/Components/Datepicker.html",
   "version": "0.2.1",
   "devDependencies": {
