--- a/package.json
+++ b/package.json
@@ -5,17 +5,16 @@
   "devDependencies": {
     "es6-object-assign": "^1.1.0",
     "npm-run-all": "^4.1.3",
-    "rollup": "^0.66.2",
-    "rollup-plugin-browsersync": "^0.2.6",
-    "rollup-plugin-buble": "^0.19.4",
-    "rollup-plugin-commonjs": "^9.1.8",
-    "rollup-plugin-node-resolve": "^3.4.0",
-    "rollup-plugin-svelte": "^4.3.1",
-    "rollup-plugin-terser": "^3.0.0",
+    "rollup": "^1.16.2",
+    "rollup-plugin-browsersync": "^1.0.0",
+    "rollup-plugin-buble": "^0.19.6",
+    "rollup-plugin-commonjs": "^10.0.1",
+    "rollup-plugin-node-resolve": "^5.1.0",
+    "rollup-plugin-svelte": "^5.1.0",
+    "rollup-plugin-terser": "^5.0.0",
     "sirv-cli": "^0.2.2",
     "standard-version": "^4.4.0",
-    "svelte": "^2.15.3",
-    "svelte-transitions": "^1.2.0"
+    "svelte": "^3.6.1"
   },
   "repository": {
     "type": "git",
