--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,14 +1,11 @@
 {
   "eslint.autoFixOnSave": true,
   "files.eol": "\n",
-  "files.associations": {
-    "*.svelte": "html"
-  },
   "eslint.validate": [
     "javascript",
     "javascriptreact",
     {
-      "language": "html",
+      "language": "svelte",
       "autoFix": true
     }
   ]
