--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "svelte-calendar",
   "svelte": "src/Components/Datepicker.svelte",
   "version": "1.0.10",
+  "license": "MIT",
   "devDependencies": {
     "es6-object-assign": "^1.1.0",
     "eslint": "^6.0.0",
