--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "svelte-calendar",
+  "name": "@beyonk/svelte-calendar",
   "svelte": "src/Components/Datepicker.svelte",
   "version": "1.5.0",
   "license": "MIT",
@@ -25,7 +25,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/6eDesign/svelte-calendar.git"
+    "url": "https://github.com/beyonk-adventures/svelte-calendar.git"
   },
   "scripts": {
     "autobuild": "rollup -c -w",
