--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,6 +20,8 @@ jobs:
         run: npm ci
       - name: Lint
         run: npm run pretest
+      - name: Github Pages
+        run: npm run build && cp -r build/ docs/
       - name: Release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
