--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "timeUtils": "^2.0.0"
   },
   "devDependencies": {
+    "@semantic-release/changelog": "^5.0.1",
+    "@semantic-release/git": "^9.0.0",
+    "@semantic-release/npm": "^7.0.9",
     "@snowpack/app-scripts-svelte": "^1.9.1",
     "@snowpack/plugin-webpack": "^2.0.17",
     "@testing-library/jest-dom": "^5.11.5",
