--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "highlight.js": "^10.4.1",
     "jest": "^26.6.3",
     "snowpack": "^2.15.1",
+    "snowpack-plugin-baseurl-handler": "0.0.3",
     "svelte": "^3.29.4",
     "svelte-check": "^1.1.2"
   }
