--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,5 +18,5 @@ jobs:
           node-version: 12
       - name: Install dependencies
         run: npm ci
-      - name: Lint
-        run: npm run pretest
+      - name: Build
+        run: DEPLOY=true npm run build
