--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "format": "prettier --write --plugin-search-dir=. ."
   },
   "devDependencies": {
+    "@semantic-release/changelog": "^5.0.1",
+    "@semantic-release/git": "^9.0.1",
+    "@semantic-release/npm": "^7.1.3",
     "@sveltejs/adapter-static": "^1.0.0-next.19",
     "@sveltejs/kit": "^1.0.0-next.147",
     "dayjs": "^1.10.6",
