--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "svelte-calendar",
   "version": "3.0.9",
-  "main": "index.js",
+  "main": "index.d.ts",
   "scripts": {
     "dev": "svelte-kit dev",
     "package": "svelte-kit package",
