fix: packaging issues

--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "svelte-calendar",
   "version": "3.0.18",
-  "main": "src/lib/index.js",
+  "main": "index.js",
   "scripts": {
     "dev": "svelte-kit dev",
     "package": "svelte-kit package",
     "prebuild": "rm -rf build",
     "build": "svelte-kit build",
     "postbuild": "touch docs/.nojekyll",
-    "postversion": "cp package.json ./package/ && cp package-lock.json ./package/ && mv ./package/index.d.ts ./package/index.js",
+    "postversion": "cp package.json ./package/ && cp package-lock.json ./package/",
     "preview": "svelte-kit preview",
     "lint": "prettier --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
     "format": "prettier --write --plugin-search-dir=. ."
