--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "svelte-calendar",
-  "version": "3.0.19",
+  "version": "3.0.27",
   "main": "index.js",
   "scripts": {
     "dev": "svelte-kit dev",
     "package": "svelte-kit package",
+    "postpackage": "node scripts/postpackage",
     "prebuild": "rm -rf build",
     "build": "svelte-kit build",
     "postbuild": "touch docs/.nojekyll",
@@ -37,5 +38,6 @@
     "svelte2tsx": "^0.4.6",
     "typescript": "^4.4.3"
   },
-  "type": "module"
+  "type": "module",
+  "svelte": "index.js"
 }
