--- a/.prettierrc
+++ b/.prettierrc
@@ -3,5 +3,13 @@
 	"singleQuote": true,
 	"trailingComma": "none",
 	"printWidth": 100,
-  "svelteBracketNewLine": true
+  "svelteBracketNewLine": true,
+  "overrides": [
+    {
+      "files": "*.md",
+      "options": {
+        "useTabs": false
+      }
+    }
+  ]
 }
